# cytrade

./: .env.example  .gitignore  AGENTS.md  MANIFEST.in  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_main_seal_follow.py  run_tests.ps1
agent/: README.md
config/: local_runtime.example.json  local_runtime.json  main_seal_follow_manual_pool.csv  main_seal_follow_pool.csv  main_seal_pool_sources.json  settings.py  standalone_stock_pool_sources.json  xtquant_bootstrap.py
core/: connection.py  data_subscription.py  l2_models.py
docs/: HANDOFF_CURRENT_PROJECT_20260623.md  LEVEL2_VALIDATION.md  MAIN_SEAL_FOLLOW_DESIGN.md  MAIN_SEAL_FOLLOW_TRIGGER_PARAMS.md  MAIN_SEAL_FOLLOW_USAGE.md  MANUAL_MANAGED_CHECKLIST.md  NEXT_TRADING_DAY_MONITORING.md  NEXT_TRADING_DAY_OBSERVATION_CHECKLIST.md  PROJECT_STATUS_20260524.md  README.md  SELF_IMPROVING_AGENT_SYSTEM.md  STOCK_POOL_DIRECTORY_STRUCTURE.md  STOCK_POOL_LOGIC.md  STRATEGY_DIRECTORY_LAYOUT.md  opening_auction_attitude_strategy_v1.md  启动简易说明.txt
monitor/: logger.py  watchdog.py
outcome/: SELF_IMPROVING_AGENT_OPERATION_GUIDE.md
runtime/: accounts.py  heartbeat.py  session.py  strategies.py
scripts/: collect_iwencai_pool.py  collect_jiuyangongshe_pool.py  collect_main_seal_pool.py  import_iwencai_pool.py  probe_main_seal_pool_live.py  register_main_seal_follow_monitor_task.ps1  run_main_seal_follow_managed_session.py  run_main_seal_follow_market_only.py  run_main_seal_follow_monitor_session.py  run_post_morning_review.bat  start_main_seal_follow_managed_session.bat  start_main_seal_follow_manual_managed.bat  start_main_seal_follow_manual_monitor.bat  start_main_seal_follow_monitor.bat
strategies/: __init__.py
strategy/: __init__.py  (+3 more)
(+165 files in other folders)
